--- a/Docker/环境搭建.md
+++ b/Docker/环境搭建.md
@@ -18,7 +18,11 @@ docker run hello-world
 
 #### 阿里云镜像加速器
 
-![镜像加速器](./aliyun.png)
+![镜像加速器](./aliyun1.png)
 
+#### Mac
 
+```
+docker.for.mac.host.internal
+```
 
