--- a/MySQL/面试题.md
+++ b/MySQL/面试题.md
@@ -1,3 +1,12 @@
+InnoDB存储引擎，表中使用主键类型为INT，则非叶子节点可以存储多少条主键?
+
+```sql
+InnoDB存储引擎是以页为单位，默认是16KB(show variables like 'innodb_page_size')
+INT类型占用空间为4个字节，指针占用空间为4个字节，非叶子节点最大可以存储16KB/(4B+4B)，约等于2千个
+```
+
+---
+
 ### 阿里的一道面试题
 
 假设我有一个网站,每次登陆的时候都会记录该用户的登陆信息,该信息用关系型数据库来存储,字段设计如下:
