--- a/多线程/多线程的一些概念.md
+++ b/多线程/多线程的一些概念.md
@@ -1,3 +1,5 @@
+
+
 ### 锁池
 
 ```java
@@ -56,10 +58,9 @@ i++其实是两步操作,读取和++
 ### CAS
 
 ```java
-一个线程间共享的变量,首先在主存中会保留一份,然后每个线程的工作内存也会保留一份副本
-预期值就是线程保留的副本
-线程从主存中获取变量的值后,主存中的变量此时可能已经被其他线程修改,但是该线程工作内存中变量却还是原来的值,这就是所谓的预期值了
-当要用CAS刷新该值的时候,如果发现线程工作内存和主存中不一致了,就会失败,如果一致,就可以更新成功.
+一个线程间共享的变量，首先在主存中有一份，然后在每个线程的工作内存也有一份
+线程从主存中获取变量的值后，主存中的变量此时可能已经被其他线程修改，但是该线程工作内存中变量却还是原来的值，这就是所谓的预期值了
+当要用CAS刷新该值的时候，如果发现线程工作内存和主存中不一致了，就会失败，如果一致，就可以更新成功
 ```
 
 ---
