--- a/Maven/常用配置.md
+++ b/Maven/常用配置.md
@@ -1,4 +1,4 @@
-1.Maven定义的中央仓库
+#### 1.中央仓库
 
 ${M2_HOME}/lib/maven-model-builder-X.X.X.jar
 
@@ -17,10 +17,11 @@ ${M2_HOME}/lib/maven-model-builder-X.X.X.jar
 </repositories>
 ```
 
-2.pom.xml中配置仓库
+#### 2.pom.xml中配置远程仓库
 
 ```xml
 <repositories>
+  <!-- 可以配置多个 -->
   <repository>
     <id>aliyun-repo</id>
     <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
@@ -31,12 +32,10 @@ ${M2_HOME}/lib/maven-model-builder-X.X.X.jar
       <enabled>false</enabled>
     </snapshots>
   </repository>
-  <!-- 可以配置多个 -->
-  ...
 </repositories>
 ```
 
-3.settings.xml中配置仓库
+#### 3.settings.xml中配置仓库
 
 ```xml
 <profiles>  
@@ -61,20 +60,58 @@ ${M2_HOME}/lib/maven-model-builder-X.X.X.jar
 </activeProfiles>
 ```
 
----
+#### 4.镜像(本质就是代理)
 
-镜像
-
-镜像本质代理
+代理中央仓库
 
 ```xml
 <mirrors>
   <mirror>
     <id>aliyun-repo</id>
     <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-    <!-- 代理中央仓库 -->
     <mirrorOf>central</mirrorOf>
   </mirror>
 </mirrors>
 ```
+
+#### 5.Deploy到远程仓库
+
+pom.xml中定义deploy的地址
+
+```xml
+<distributionManagement>
+  <repository>
+    <id>nexus-releases</id>
+    <name>Nexus Release Repository</name>
+    <url>http://127.0.0.1:8080/nexus/content/repositories/releases/</url>
+  </repository>
+  <snapshotRepository>
+    <id>nexus-snapshots</id>
+    <name>Nexus Snapshot Repository</name>
+    <url>http://127.0.0.1:8080/nexus/content/repositories/snapshots/</url>
+  </snapshotRepository>
+</distributionManagement>
+```
+
+settings.xml中定义认证信息
+
+```xml
+<servers>
+  <server>
+    <!-- id跟上面的要一致 -->
+    <id>nexus-releases</id>
+    <username>user</username>
+    <password>xxx</password>
+  </server>
+  <server>
+    <id>nexus-snapshots</id>
+    <username>user</username>
+    <password>xxx</password>
+  </server>
+</servers>
+```
+
+---
+
+[Maven最佳实践：Maven仓库](https://www.pudn.com/news/62615bd00e75e42012407eee.html)
 
